kubernetes-ingress-demo/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-demo-service
                port:
                  number: 8080
